# emojifont

./: .gitignore  FONT_INJECTION.md  README.md  README_FONT_TESTING.md  USAGE.md  flake.nix  install_and_test.sh  pyproject.toml  test_font.py
.github/workflows/: ci.yml  release.yml
FontTestApp/: Package.swift
FontTestApp/Sources/: AlignmentCheck.swift  ContentView.swift  FontLoader.swift  FontTestApp.swift  ImageCapture.swift  Info.plist  TerminalTestView.swift
src/emojifont/: __init__.py  inject.py
