[project]
name = "emojifont"
version = "0.1.3"
description = "Inject custom images into TrueType fonts as color emoji using Apple's SBIX format"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Paul Johnson" },
]
keywords = ["font", "emoji", "sbix", "truetype", "fonttools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Fonts",
]
dependencies = [
    "fonttools>=4.50",
    "pillow>=10.0",
]

[project.scripts]
emojifont = "emojifont.inject:main"

[project.urls]
Repository = "https://github.com/pj/emojifont"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"
